# Moat

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/moat-cli/: Cargo.toml
crates/moat-cli/src/: demo.rs  main.rs  style.rs
crates/moat-core/: Cargo.toml
crates/moat-core/benches/: crypto.rs
crates/moat-core/src/: capability.rs  error.rs  identity.rs  lib.rs  message.rs
crates/moat-protocol/: Cargo.toml
crates/moat-protocol/src/: facade.rs  lib.rs
crates/moat-relay/: Cargo.toml
crates/moat-relay/examples/: orchestrated_pipeline.rs
crates/moat-relay/src/: lib.rs  registry.rs  router.rs
crates/moat-relay/tests/: integration.rs
crates/moat-runtime/: Cargo.toml
crates/moat-runtime/src/: audit.rs  lib.rs  monitor.rs  pep.rs  sandbox.rs  secret.rs
crates/moat-wasm/: Cargo.toml  README.md  package.json
crates/moat-wasm/src/: lib.rs
crates/moat-wasm/test/: smoke.mjs
examples/delegated_task/: Cargo.toml
examples/delegated_task/src/: main.rs
examples/ping_pong/: Cargo.toml
examples/ping_pong/src/: main.rs
examples/sandbox_fs_attenuation/: Cargo.toml
examples/sandbox_fs_attenuation/src/: main.rs
examples/secret_injection/: Cargo.toml
examples/secret_injection/src/: main.rs
spec/: PROTOCOL.md
