[workspace]
resolver = "2"
members = [
    "crates/moat-protocol",
    "crates/moat-core",
    "crates/moat-runtime",
    "crates/moat-relay",
    "crates/moat-cli",
    "crates/moat-wasm",
    "examples/ping_pong",
    "examples/delegated_task",
    "examples/secret_injection",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/HueCodes/Moat"
homepage = "https://github.com/HueCodes/Moat"
authors = ["Moat Protocol Contributors"]
categories = ["authentication", "cryptography", "wasm"]
keywords = ["agent", "sandbox", "capability", "security", "wasm"]

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Sandbox
wasmtime = "29"
wasmtime-wasi = "29"
cap-std = "3"
wat = "1"

# Bench (dev-only)
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# Workspace crates
moat-protocol = { path = "crates/moat-protocol", version = "0.1.0" }
moat-core = { path = "crates/moat-core", version = "0.1.0" }
moat-runtime = { path = "crates/moat-runtime", version = "0.1.0" }
moat-relay = { path = "crates/moat-relay", version = "0.1.0" }
