[package]
name = "moat-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Command-line interface for the Moat agent sandbox protocol"

[dependencies]
moat-core = { workspace = true }
moat-runtime = { workspace = true }
moat-relay = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
chrono = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
