[package]
name = "moat-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Moat CLI — generate agent identities, issue and attenuate capability tokens, verify audit logs, and run scripted multi-agent security demos."

[dependencies]
moat-protocol = { workspace = true }
moat-core = { workspace = true }
moat-runtime = { workspace = true }
moat-relay = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
chrono = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
