[package]
name = "moat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Moat core types — Ed25519 identity, signed capability tokens with monotonic attenuation, and cryptographic authenticated messages. The security primitives behind the Moat agent runtime (mTLS for AI agents)."

[dependencies]
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "crypto"
harness = false
