[package]
name = "moat-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Moat — the missing security layer for MCP, LangChain, and CrewAI. mTLS for AI agents: signed identities, capability tokens with monotonic attenuation, Wasm sandboxing, and a tamper-evident audit log."
readme = "../../README.md"

[dependencies]
moat-core = { workspace = true }
moat-runtime = { workspace = true }
moat-relay = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
ed25519-dalek = { workspace = true }
