[package]
name = "moat-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Moat relay — agent registry and message router with built-in PEP verification, audit logging, runtime monitoring, rate limiting, and replay protection."

[dependencies]
moat-core = { workspace = true }
moat-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[[example]]
name = "orchestrated_pipeline"
path = "examples/orchestrated_pipeline.rs"
