[package]
name = "moat-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Moat sandbox runtime: PEP, sandbox execution, secret proxy, monitor, audit log"

[dependencies]
moat-core = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
cap-std = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
wat = { workspace = true }
