[package]
name = "moat-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Moat runtime — Policy Enforcement Point, Wasmtime sandbox, tamper-evident audit log, runtime monitor, and secret proxy for sandboxed agent-to-agent communication."

[dependencies]
moat-core = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
cap-std = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
wat = { workspace = true }
