[package]
name = "moat-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
description = "WebAssembly bindings for Moat core types — call the Moat agent security primitives (signed identities, capability tokens, message verification) from TypeScript/JavaScript in Node or the browser."
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
moat-core = { workspace = true }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["js"] }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
# Enable web-compatible randomness sources on wasm32-unknown-unknown.
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
